# kfetch

./: CMakeLists.txt  CPU.cpp  Desktop.cpp  GPU.cpp  Kernel.cpp  Packager.cpp  README.md  logos.cpp  main.cpp
include/: CPU.hpp  Desktop.hpp  GPU.hpp  Kernel.hpp  Packager.hpp  colors.hpp  logos.hpp
